setting: ⚙️ ktlint gradle plugin 의존성 추가 및 linting, checking task 추가